syntax = "proto3";

package api;

service Calendar {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc GetById(GetByIdRequest) returns (GetByIdResponse) {}
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc All(ListRequest) returns (ListResponse) {}
  rpc Update(UpdateRequest) returns (UpdateResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message Event {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string time = 4;
  string timezone = 5;
  string duration = 6;
  string notes = 7;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string error = 2;
}

message GetByIdRequest {
  int32 id = 1;
}

message GetByIdResponse {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string time = 4;
  string timezone = 5;
  string duration = 6;
  string notes = 7;}

message CreateRequest {
  string title = 1;
  string description = 2;
  string time = 3;
  string timezone = 4;
  int32 duration = 5;
  string notes = 6;
}

message CreateResponse {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string time = 4;
  string timezone = 5;
  string duration = 6;
  string notes = 7;
}

message ListRequest {}

message ListResponse {
  repeated Event events = 1;
}

message UpdateRequest {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string time = 4;
  string timezone = 5;
  string duration = 6;
  string notes = 7;
}

message UpdateResponse {
  string status = 1;
  string error = 2;
}

message DeleteRequest {
  int32 id = 1;
}

message DeleteResponse {
  string status = 1;
  string error = 2;
}

